syntax = "proto3";
package model;
option go_package = ".;mall";


// Coupon 优惠券表
// 用于存储优惠券信息，需要注意的是优惠券的使用类型：0->全场通用；1->指定分类；2->指定商品，不同使用类型的优惠券使用范围不一样。
message Coupon {
  // 基本信息
  uint64 id = 1; //
  string name = 2; // 名称
  string amount = 3; // 金额，保留两位小数
  string note = 4; // 备注
  string code = 5; // 优惠码

  // 数量
  uint32 count = 6; // 数量
  uint32 publish_count = 7; // 发行数量
  uint32 use_count = 8; // 已使用数量
  uint32 receive_count = 9; // 领取数量

  // 类型
  uint32 type = 10; // 优惠卷类型；0->全场赠券；1->会员赠券；2->购物赠券；3->注册赠券
  CouponUseType use_type = 11; // 使用类型：0->全场通用；1->指定分类；2->指定商品

  // 领取限制
  uint32 per_limit = 12; // 每人限领张数
  uint32 enable_time = 13; // 可以领取的日期
  uint32 member_level = 14; // 可领取的会员类型：0->无限制

  // 使用限制
  string min_point = 15; // 使用门槛；0表示无门槛
  uint32 platform = 16; // 使用平台：0->全部；1->移动；2->PC
  uint32 start_time = 17; // 开始使用时间
  uint32 end_time = 18; // 结束使用时间
}

// 使用类型
enum CouponUseType {
  COUPON_USE_TYPE_GENERAL = 0; // 全场通用
  COUPON_USE_TYPE_SPECIFIC_CATEGORY = 1; // 指定分类
  COUPON_USE_TYPE_SPECIFIC_PRODUCT = 2; // 指定商品
}